--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,6 @@
 {
     "name": "weronika/tweeter",
-    "require-dev": {
-        "phpunit/phpunit": "4.8"
-    },
+
     "authors": [
         {
             "name": "Weronika Ludwiczak",
@@ -14,5 +12,13 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "phpunit/dbunit": ">=1.2"
+    },
+
+    "autoload": {
+      "psr-4":{
+          "src\\":"src/classes"
+      }
+
+
     }
 }
